kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: -deployment
  labels:
    app: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: appimage
        image: appimage
        command: ["/bin/bash"]
        args: ["-c", "start", "web"]
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 3
        readinessProbe:
          initialDelaySeconds: 20
          periodSeconds: 10
          httpGet:
            path: /healthcheck
            port: 5000
