kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: -service
spec:
  type: NodePort
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
