kustomize/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: -ingress
spec:
  rules:
  - host: flask-celery-sample.io
    http:
      paths:
      - path: / 
        backend:
          serviceName: -service
          servicePort: 80
